--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 <a href="" class="linkNav" id="info">Info</a>
                 </div>
                 <div class="button">
-                <button class="primaryBigButton" id="discoverButton">Discover</button>
+                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+                        <button class="primaryBigButton" id="discoverButton">Discover</button>
+                    <a>
                 </div>
             </div>
         </nav>
