--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <title>Test</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <link rel="stylesheet" href="Stylesheets/buttons.css">
 </head>
-<body>
+<body onload="myFunction()">
 
+<div id="myDiv">
 <div id="blok1">
     <div class="obsah">
         <nav>
@@ -43,5 +45,11 @@
         <h1>.</h1>
     </div>
 </div>
+</div>
+
+<div id="loader-wrapper">
+    <span class="loader"><img src="Images/coloredLogo.svg" alt="logo" id="logo"><span class="loader-inner"></span></span>
+</div>
+
 </body>
 </html>
