--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 </div>
 
 <div id="loader-wrapper">
-    <span class="loader"><img src="Images/coloredLogo.svg" alt="logo" id="logo"><span class="loader-inner"></span></span>
+    <video autoplay loop muted playsinline class="portImage" id="loading">
+        <source src="Images/loading.mp4">
+    </video>
 </div>
 
 </body>
