--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 </div>
 
 <div id="loader-wrapper">
-    <video autoplay loop muted playsinline class="portImage" id="loading">
-        <source src="Images/loading.mp4">
+    <video autoplay loop muted playsinline class="portImage" >
+        <source src="Images/loading.mp4" id="loading">
     </video>
 </div>
 
