--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <link rel="stylesheet" href="Stylesheets/buttons.css">
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-AU-compatible" content="ie=edge">
 </head>
 <body onload="myFunction()">
 
@@ -47,10 +50,10 @@
 </div>
 </div>
 
-<div id="loader-wrapper">
-    <video autoplay loop muted playsinline class="portImage" >
-        <source src="Images/loading.mp4" id="loading">
-    </video>
+<div id="loader-wrapper" class="">
+    <div id="anim"></div>
+    <script src="lottie.js"></script>
+    <script src="loading.js"></script>
 </div>
 
 </body>
