--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Test</title>
+    <title>Liam's Guide</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <link rel="stylesheet" href="Stylesheets/buttons.css">
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-AU-compatible" content="ie=edge">
 </head>
 <body onload="myFunction()">
 
@@ -50,7 +48,7 @@
 </div>
 </div>
 
-<div id="loader-wrapper" class="">
+<div id="loader-wrapper" class="loading">
     <div id="anim"></div>
     <script src="lottie.js"></script>
     <script src="loading.js"></script>
