--- a/index.html
+++ b/index.html
@@ -20,22 +20,25 @@
             </div>
             <div id="navRight">
                 <div class="link">
-                <a href="" class="linkNav" id="home">Home</a>
-                <a href="" class="linkNav" id="contact">Contact</a>
-                <a href="" class="linkNav" id="info">Info</a>
-                </div>
+                    <a href="" class="linkNav" id="home">Home</a>
+                    <a href="" class="linkNav" id="contact">Contact</a>
+                    <a href="" class="linkNav" id="info">Info</a>
                 <div class="button">
                 <button class="primaryBigButton" id="discoverButton">Discover</button>
+                    <a href="" id="hamburgerLink"><img src="Images/hamburger.svg" id="hamburger"></a>
+                </div>
                 </div>
             </div>
         </nav>
 
+        <div id="mainContent">
         <div class="rightSideText">
             <h4 class="category">Liam's guide</h4>
             <h1 class="pageName">Discover your city... Like a pro!</h1>
             <button class="primaryMediumButton">Discover</button>
         </div>
         <img src="Images/liam.svg" alt="liam" class="liamIllustration">
+        </div>
     </div>
 </div>
 <div id="blok2">
