--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h1 class="pageName">Discover your city... Like a pro!</h1>
             <button class="primaryMediumButton">Discover</button>
         </div>
-            <img src="Images/liam.svg" alt="liam" class="liamIllustration">
+            <img src="Images/liam2.svg" alt="liam" class="liamIllustration">
         </div>
     </div>
 </div>
