--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="script.js"></script>
     <link rel="stylesheet" href="Stylesheets/buttons.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="Images/favicon.ico">
 </head>
 <body onload="myFunction()">
 
