--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="" class="linkNav" id="info">Info</a>
                 <div class="button">
                 <button class="primaryBigButton" id="discoverButton">Discover</button>
-                    <a href="" id="hamburgerLink"><img src="Images/hamburger.svg" id="hamburger"></a>
+                    <a href="" id="hamburgerLink"><img alt="hamburger" src="Images/hamburger.svg" id="hamburger"></a>
                 </div>
                 </div>
             </div>
@@ -38,7 +38,7 @@
             <h1 class="pageName">Discover your city... Like a pro!</h1>
             <button class="primaryMediumButton">Discover</button>
         </div>
-            <img src="Images/liam2.svg" alt="liam" class="liamIllustration">
+            <img src="Images/liam2.svg" alt="liam" id="liam" class="liamIllustration">
         </div>
     </div>
 </div>
