--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body onload="myFunction()">
 
 <div id="myDiv">
+    <div id="opacityContent">
 <div id="blok1">
     <div class="obsah">
         <nav>
@@ -52,6 +53,7 @@
 </div>
 </div>
 
+</div>
 
 <div id="loader-wrapper" class="loading">
     <div id="anim"></div>
