--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Liam's Guide</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    <link rel="stylesheet" href="Stylesheets/buttons.css">
+    <link rel="stylesheet" href="Stylesheets/designsystem.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="Images/favicon.ico">
 </head>
@@ -26,7 +26,7 @@
                     <a href="" class="linkNav" id="contact">Contact</a>
                     <a href="" class="linkNav" id="info">Info</a>
                 <div class="button">
-                <button class="primaryBigButton" id="discoverButton">Discover</button>
+                <a class="primaryBigButton" id="discoverButton" href="guide/">Discover</a>
                     <a href="" id="hamburgerLink"><img alt="hamburger" src="Images/hamburger.svg" id="hamburger"></a>
                 </div>
                 </div>
@@ -37,7 +37,7 @@
         <div class="rightSideText">
             <h4 class="category">Liam's guide</h4>
             <h1 class="pageName">Discover your city... Like a pro!</h1>
-            <button class="primaryMediumButton">Discover</button>
+            <a class="primaryMediumButton" href="guide/">Discover</a>
         </div>
             <img src="Images/liam2.svg" alt="liam" id="liam" class="liamIllustration">
         </div>
@@ -45,7 +45,9 @@
 </div>
 <div id="blok2">
     <div id="uvod">
-        <h1>.</h1>
+        <div class="funkceObsah">
+            <h4>Functions</h4>
+        </div>
     </div>
     <div id="popis">
         <h1>.</h1>
