--- a/guide/index.html
+++ b/guide/index.html
@@ -73,25 +73,61 @@
               <div class="overlay overlay_2">
                 <p class="imageCategory">Café</p>
                 <h3 class="imageName">Pikola</h3>
-                <p class="imageAddress">ahoj</p>
+                <p class="imageAddress">Polská 3, Šumperk</p>
               </div>
             </div>
 
             <div class="image_wrapper">
-              <img class="placeImage" src="Images/pikola.jpg" alt="" />
+              <img class="placeImage" src="Images/pikolaZ.jpeg" alt="" />
               <div class="overlay overlay_2">
                 <p class="imageCategory">Café</p>
                 <h3 class="imageName">Pikola</h3>
-                <p class="imageAddress">ahoj</p>
+                <p class="imageAddress">Zábřežská, Šumperk</p>
               </div>
             </div>
 
             <div class="image_wrapper">
-              <img class="placeImage" src="Images/pikola.jpg" alt="" />
+              <img class="placeImage" src="Images/kavomilka.jpg" alt="" />
               <div class="overlay overlay_2">
                 <p class="imageCategory">Café</p>
-                <h3 class="imageName">Pikola</h3>
-                <p class="imageAddress">ahoj</p>
+                <h3 class="imageName">Kávomilka</h3>
+                <p class="imageAddress">Krátká 2863/2, Růžová, Šumperk</p>
+              </div>
+            </div>
+
+            <div class="image_wrapper">
+              <img class="placeImage" src="Images/bistrojj.jpeg" alt="" />
+              <div class="overlay overlay_2">
+                <p class="imageCategory">Restaurant</p>
+                <h3 class="imageName">Bistro J&J</h3>
+                <p class="imageAddress">Gen. Svobody 244/9, Šumperk</p>
+              </div>
+            </div>
+
+            <div class="image_wrapper">
+              <img class="placeImage" src="Images/cakir.jpeg" alt="" />
+              <div class="overlay overlay_2">
+                <p class="imageCategory">Bistro</p>
+                <h3 class="imageName">Cakir's Burger</h3>
+                <p class="imageAddress">nám. Míru 22, Šumperk</p>
+              </div>
+            </div>
+
+            <div class="image_wrapper">
+              <img class="placeImage" src="Images/arte.jpeg" alt="" />
+              <div class="overlay overlay_2">
+                <p class="imageCategory">Restaurant</p>
+                <h3 class="imageName">Arte</h3>
+                <p class="imageAddress">Husitská 2635, Šumperk</p>
+              </div>
+            </div>
+
+            <div class="image_wrapper">
+              <img class="placeImage" src="Images/donutpoint.jpeg" alt="" />
+              <div class="overlay overlay_2">
+                <p class="imageCategory">Donuts</p>
+                <h3 class="imageName">Donutpoint</h3>
+                <p class="imageAddress">Hlavní tř. 8/13, Šumperk</p>
               </div>
             </div>
 
