--- a/guide/index.html
+++ b/guide/index.html
@@ -51,17 +51,25 @@
 
           <script src="buttonFilter.js"></script>
           <div id="filter">
-            <div class="checkbox">
-              <label><input type="checkbox" rel="cafe" onchange="change()" /> Cafe</label>
+            <div class="filterButton action">
+              <div class="checkbox">
+                <label><input type="checkbox" rel="cafe" onchange="change()" /><span>Café</span></label>
+              </div>
             </div>
-            <div class="checkbox">
-              <label><input type="checkbox" rel="restarant" onchange="change()" /> Restaurant</label>
+            <div class="filterButton action">
+              <div class="checkbox">
+                <label><input type="checkbox" rel="restarant" onchange="change()" /><span>Restaurant</span></label>
+              </div>
             </div>
-            <div class="checkbox">
-              <label><input type="checkbox" rel="bistro" onchange="change()" /> Bistro</label>
+            <div class="filterButton action">
+              <div class="checkbox">
+                <label><input type="checkbox" rel="bistro" onchange="change()" /><span>Bistro</span></label>
+              </div>
             </div>
-            <div class="checkbox">
-              <label><input type="checkbox" rel="donuts" onchange="change()" /> Donuts</label>
+            <div class="filterButton action">
+              <div class="checkbox">
+                <label><input type="checkbox" rel="donuts" onchange="change()" /><span>Donuts</span></label>
+              </div>
             </div>
             <!--<div class="checkbox">
               <label><input type="checkBox" rel="filterOption" /></label>
