--- a/guide/index.html
+++ b/guide/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Liam's Guide - Discover</title>
     <link rel="stylesheet" href="../Stylesheets/guide.css">
-    <script src="../script.js"></script>
+    <script src="script.js"></script>
     <link rel="stylesheet" href="../Stylesheets/designsystem.css">
     <link rel="stylesheet" href="../Stylesheets/placeImagesAttach.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -182,14 +182,13 @@
       </div>
     </div>
   </div>
-
+  </div>
 </div>
 
-<div id="loader-wrapper" class="loading">
-  <div id="anim"></div>
+<div id="loader-wrapper-Guide" class="loading">
+  <div id="animG"></div>
   <script src="lottie.js"></script>
   <script src="loading.js"></script>
 </div>
-
 </body>
 </html>
