--- a/guide/index.html
+++ b/guide/index.html
@@ -77,7 +77,7 @@
             </div>
             <div class="filterButton action">
               <div class="checkbox">
-                <label><input type="checkbox" rel="education" onchange="change()" /><span>Education</span></label>
+                <label><input type="checkbox" rel="sport" onchange="change()" /><span>Sport</span></label>
               </div>
             </div>
           </div>
@@ -190,7 +190,7 @@
 
             <div class="education">
               <div class="image_wrapper">
-                <img class="placeImage" src="Images/pikola.jpg" alt="" />
+                <img class="placeImage" src="Images/prumka.jpeg" alt="" />
                 <div class="overlay overlay_2">
                   <p class="imageCategory">Education</p>
                   <h3 class="imageName">VOŠ a SPŠ Šumperk</h3>
