--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="" class="linkNav" id="info">Info</a>
                 <div class="button">
                 <a class="primaryBigButton" id="discoverButton" href="guide/">Discover</a>
-                    <a href="" id="hamburgerLink"><img alt="hamburger" src="Images/hamburger.svg" id="hamburger"></a>
+                    <img alt="hamburger" src="Images/hamburger.svg" id="hamburger" onclick="hamburger()">
                 </div>
                 </div>
             </div>
@@ -61,6 +61,24 @@
     <div id="anim"></div>
     <script src="lottie.js"></script>
     <script src="loading.js"></script>
+</div>
+
+<div id="hamburgerMenu">
+    <div class="contentHam">
+        <br>
+        <br>
+    <a href="" class="linkHamburger"><h2>Home</h2></a>
+        <br>
+    <a href="" class="linkHamburger"><h2>Info</h2></a>
+        <br>
+    <a href="" class="linkHamburger"><h2>Contact</h2></a>
+        <br>
+    <a href="" class="linkHamburger" id="discover"><h2>DISCOVER</h2></a>
+        <br>
+        <br>
+        <img alt="hamburger" src="Images/close.svg" id="close" onclick="hamburgerClose()">
+    <!--<h2 onclick="hamburgerClose()">Zavřít</h2>-->
+    </div>
 </div>
 
 </body>
