--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <br>
     <a href="" class="linkHamburger"><h2>Contact</h2></a>
         <br>
-    <a href="" class="linkHamburger" id="discover"><h2>DISCOVER</h2></a>
+    <a href="guide/" class="linkHamburger" id="discover"><h2>DISCOVER</h2></a>
         <br>
         <br>
         <img alt="hamburger" src="Images/close.svg" id="close" onclick="hamburgerClose()">
