--- a/guide/index.html
+++ b/guide/index.html
@@ -27,7 +27,7 @@
               <a href="" class="linkNavG" id="info">Info</a>
               <div class="button">
                 <button class="primaryBigButton" id="discoverButton">Discover</button>
-                <img alt="hamburger" src="../Images/hamburger.svg" id="hamburger" onclick="hamburger()">
+                <img alt="hamburger" src="../Images/hamburger.svg" id="hamburgerLink" onclick="hamburger()">
               </div>
             </div>
           </div>
@@ -216,13 +216,13 @@
   <div class="contentHam">
     <br>
     <br>
-    <a href="" class="linkHamburger"><h2>Home</h2></a>
+    <a href="../" class="linkHamburger"><h2>Home</h2></a>
     <br>
     <a href="" class="linkHamburger"><h2>Info</h2></a>
     <br>
     <a href="" class="linkHamburger"><h2>Contact</h2></a>
     <br>
-    <a href="" class="linkHamburger" id="discover"><h2>DISCOVER</h2></a>
+    <a href="../guide" class="linkHamburger" id="discover"><h2>DISCOVER</h2></a>
     <br>
     <br>
     <img alt="hamburger" src="../Images/close.svg" id="close" onclick="hamburgerClose()">
