--- a/index.html
+++ b/index.html
@@ -43,16 +43,19 @@
         </div>
     </div>
 </div>
-<div id="blok2">
-    <div id="uvod">
-        <div class="funkceObsah">
-            <h4>Functions</h4>
+        <div id="blok2">
+            <div id="uvod">
+                <div class="funkceObsah">
+                    <h2>Function</h2>
+
+                </div>
+            </div>
+            <div id="popis">
+                <div class="info">
+                    <h1>Liam's guide</h1>
+                </div>
+            </div>
         </div>
-    </div>
-    <div id="popis">
-        <h1>.</h1>
-    </div>
-</div>
 </div>
 
 </div>
