--- a/guide/index.html
+++ b/guide/index.html
@@ -23,10 +23,10 @@
           <div id="navRight">
             <div class="link">
               <a href="../" class="linkNavG" id="home">Home</a>
-              <a href="" class="linkNavG" id="contact">Contact</a>
-              <a href="" class="linkNavG" id="info">Info</a>
+              <a href="../contact/" class="linkNavG" id="contact">Contact</a>
+              <a href="javascript:void(0)" class="linkNavG" id="info">Info</a>
               <div class="button">
-                <button class="primaryBigButton" id="discoverButton">Discover</button>
+                <a href="javascript:void(0)" class="primaryBigButton" id="discoverButton">Discover</a>
                 <img alt="hamburger" src="../Images/hamburger.svg" id="hamburgerLink" onclick="hamburger()">
               </div>
             </div>
@@ -218,11 +218,11 @@
     <br>
     <a href="../" class="linkHamburger"><h2>Home</h2></a>
     <br>
-    <a href="" class="linkHamburger"><h2>Info</h2></a>
+    <a href="javascript:void(0)" class="linkHamburger"><h2>Info</h2></a>
     <br>
-    <a href="" class="linkHamburger"><h2>Contact</h2></a>
+    <a href="../contact/" class="linkHamburger"><h2>Contact</h2></a>
     <br>
-    <a href="../guide" class="linkHamburger" id="discover"><h2>DISCOVER</h2></a>
+    <a href="javascript:void(0)" class="linkHamburger" id="discover"><h2>DISCOVER</h2></a>
     <br>
     <br>
     <img alt="hamburger" src="../Images/close.svg" id="close" onclick="hamburgerClose()">
