--- a/contact/index.html
+++ b/contact/index.html
@@ -22,11 +22,11 @@
             </div>
             <div id="navRight">
                 <div class="link">
-                    <a href="" class="linkNav" id="home">Home</a>
-                    <a href="" class="linkNav" id="contact">Contact</a>
-                    <a href="" class="linkNav" id="info">Info</a>
+                    <a href="../" class="linkNav" id="home">Home</a>
+                    <a href="javascript:void(0)" class="linkNav" id="contact">Contact</a>
+                    <a href="javascript:void(0)" class="linkNav" id="info">Info</a>
                 <div class="button">
-                <a class="primaryBigButton" id="discoverButton" href="guide/">Discover</a>
+                <a class="primaryBigButton" id="discoverButton" href="../guide/">Discover</a>
                     <img alt="hamburger" src="../Images/hamburger.svg" id="hamburger" onclick="hamburger()">
                 </div>
                 </div>
@@ -95,13 +95,13 @@
     <div class="contentHam">
         <br>
         <br>
-    <a href="" class="linkHamburger"><h2>Home</h2></a>
+    <a href="../" class="linkHamburger"><h2>Home</h2></a>
         <br>
-    <a href="" class="linkHamburger"><h2>Info</h2></a>
+    <a href="javascript:void(0)" class="linkHamburger"><h2>Info</h2></a>
         <br>
-    <a href="" class="linkHamburger"><h2>Contact</h2></a>
+    <a href="javascript:void(0)" class="linkHamburger"><h2>Contact</h2></a>
         <br>
-    <a href="guide/" class="linkHamburger" id="discover"><h2>DISCOVER</h2></a>
+    <a href="../guide/" class="linkHamburger" id="discover"><h2>DISCOVER</h2></a>
         <br>
         <br>
         <img alt="hamburger" src="../Images/close.svg" id="close" onclick="hamburgerClose()">
