--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             </div>
             <div id="navRight">
                 <div class="link">
-                    <a href="" class="linkNav" id="home">Home</a>
-                    <a href="" class="linkNav" id="contact">Contact</a>
-                    <a href="" class="linkNav" id="info">Info</a>
+                    <a href="javascript:void(0)" class="linkNav" id="home">Home</a>
+                    <a href="contact/" class="linkNav" id="contact">Contact</a>
+                    <a href="javascript:void(0)" class="linkNav" id="info">Info</a>
                 <div class="button">
                 <a class="primaryBigButton" id="discoverButton" href="guide/">Discover</a>
                     <img alt="hamburger" src="Images/hamburger.svg" id="hamburger" onclick="hamburger()">
@@ -70,11 +70,11 @@
     <div class="contentHam">
         <br>
         <br>
-    <a href="" class="linkHamburger"><h2>Home</h2></a>
+    <a href="javascript:void(0)" class="linkHamburger"><h2>Home</h2></a>
         <br>
-    <a href="" class="linkHamburger"><h2>Info</h2></a>
+    <a href="javascript:void(0)" class="linkHamburger"><h2>Info</h2></a>
         <br>
-    <a href="" class="linkHamburger"><h2>Contact</h2></a>
+    <a href="contact/" class="linkHamburger"><h2>Contact</h2></a>
         <br>
     <a href="guide/" class="linkHamburger" id="discover"><h2>DISCOVER</h2></a>
         <br>
