Hamburger menu update

--- a/guide/index.html
+++ b/guide/index.html
@@ -222,7 +222,7 @@
     <br>
     <a href="../contact/" class="linkHamburger"><h2>Contact</h2></a>
     <br>
-    <a href="javascript:void(0)" class="linkHamburger" id="discover"><h2>DISCOVER</h2></a>
+    <a href="javascript:void(0)" class="primarySmallButton" id="discover"><h2>DISCOVER</h2></a>
     <br>
     <br>
     <img alt="hamburger" src="../Images/close.svg" id="close" onclick="hamburgerClose()">
