--- a/contact/index.html
+++ b/contact/index.html
@@ -101,7 +101,7 @@
         <br>
     <a href="javascript:void(0)" class="linkHamburger"><h2>Contact</h2></a>
         <br>
-    <a href="../guide/" class="primarySmallButton" id="discover"><h2>DISCOVER</h2></a>
+    <a href="../guide/" class="primarySmallButton" id="discover"><h2>Discover</h2></a>
         <br>
         <br>
         <img alt="hamburger" src="../Images/close.svg" id="close" onclick="hamburgerClose()">
