--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@
                     <h1>Liam's guide</h1>
                 </div>
             </div>
+            <footer>
+                <div class="footerContent">
+                <div class="footerPadding">
+                    <div class="textFooterPlace">
+                        <h2 class="footerNadpis">Our guide is waiting for your use!</h2>
+                    </div>
+                    <div class="buttonFooterPlace">
+                        <a class="thirdBigButtonDark" id="footerButton" href="guide/">Discover</a>
+                    </div>
+                </div>
+                </div>
+            </footer>
         </div>
 </div>
 
