--- a/contact/index.html
+++ b/contact/index.html
@@ -50,27 +50,35 @@
                 <div class="contacts">
                     <div class="blokProfile">
                         <img src="Images/adam.jpg" alt="adam" id="adam" class="profilePic">
+                        <div class="textContact">
                         <h2 class="imageCategory">Adam Koukola</h2>
                         <h3 class="imageName">Head of Project</h3>
                         <p class="imageAddress">koukolaa.ita20@vsps-su.cz</p>
+                        </div>
                     </div>
                     <div class="blokProfile">
                         <img src="Images/user.svg" alt=vasek" id="vasek" class="profilePic">
+                        <div class="textContact">
                         <h2 class="imageCategory">Richard Slovák</h2>
                         <h3 class="imageName">UX / Motion Design</h3>
                         <p class="imageAddress">slovakr.ita20@vsps-su.cz</p>
                     </div>
+                    </div>
                     <div class="blokProfile">
                         <img src="Images/user.svg" alt="risa" id="risa" class="profilePic">
+                        <div class="textContact">
                         <h2 class="imageCategory">Václav Sládek</h2>
                         <h3 class="imageName">Back-end developer</h3>
                         <p class="imageAddress">sladekv.ita20@vsps-su.cz</p>
                     </div>
+                    </div>
                     <div class="blokProfile">
                         <img src="Images/user.svg" alt="honza" id="honza" class="profilePic">
+                        <div class="textContact">
                         <h2 class="imageCategory">Jan Pospíšil</h2>
                         <h3 class="imageName">Back-end developer</h3>
                         <p class="imageAddress">pospisij.ita20@vsps-su.cz</p>
+                    </div>
                     </div>
                 </div>
 
@@ -81,6 +89,18 @@
             <h1>Liam's guide</h1>
         </div>
 </div>
+    <footer>
+        <div class="footerContent">
+            <div class="footerPadding">
+                <div class="textFooterPlace">
+                    <h2 class="footerNadpis">Our guide is waiting for your use!</h2>
+                </div>
+                <div class="buttonFooterPlace">
+                    <a class="thirdBigButtonDark" id="footerButton" href="guide/">Discover</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </div>
     </div>
 </div>
