--- a/guide/index.html
+++ b/guide/index.html
@@ -70,6 +70,7 @@
               </div>
             </div>
           </div>
+          </div>
             <!--<div class="checkbox">
               <label><input type="checkBox" rel="filterOption" /></label>
             </div>
@@ -272,9 +273,21 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div class="footerContent">
+          <div class="footerPadding">
+            <div class="textFooterPlace">
+              <h2 class="footerNadpis">Our guide is waiting for your use!</h2>
+            </div>
+            <div class="buttonFooterPlace">
+              <a class="thirdBigButtonDark" id="footerButton" href="guide/">Discover</a>
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
   </div>
-
+  </div>
 <div id="loader-wrapper-Guide" class="loading">
   <div id="animG"></div>
   <script src="lottie.js"></script>
