Fix linků ve footer buttonu

--- a/contact/index.html
+++ b/contact/index.html
@@ -96,7 +96,7 @@
                     <h2 class="footerNadpis">Our guide is waiting for your use!</h2>
                 </div>
                 <div class="buttonFooterPlace">
-                    <a class="thirdBigButtonDark" id="footerButton" href="guide/">Discover</a>
+                    <a class="thirdBigButtonDark" id="footerButton" href="../guide/">Discover</a>
                 </div>
             </div>
         </div>
