--- a/guide/index.html
+++ b/guide/index.html
@@ -280,7 +280,7 @@
               <h2 class="footerNadpis">Our guide is waiting for your use!</h2>
             </div>
             <div class="buttonFooterPlace">
-              <a class="thirdBigButtonDark" id="footerButton" href="guide/">Discover</a>
+              <a class="thirdBigButtonDark" id="footerButton" href="javascript:void(0)">Discover</a>
             </div>
           </div>
         </div>
